# poc2

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix  implementation-plan.md  package.json  release-plz.toml  rust-toolchain.toml  rustfmt.toml
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: client_log.rs  lib.rs  main.rs  trade_search.rs
crates/advisor/: CHANGELOG.md  Cargo.toml
crates/advisor/benches/: advisor_plan.rs
crates/advisor/src/: action.rs  candidate.rs  featurize.rs  goal.rs  lib.rs  planner.rs  recommendation.rs  recovery.rs  scorer.rs  simulator.rs  stash.rs
crates/advisor/src/training/: analytic_model.rs  artefact.rs  families.rs  hybrid.rs  imitation.rs  metrics.rs  mod.rs  model_learner.rs  solve.rs  value_iteration.rs
crates/advisor/tests/: annul_chaos_loop.rs  base_registry_class_resolution.rs  canonical_rediscovery.rs  cross_source_validation.rs  es_body_armour_chain.rs  live_bundle_smoke.rs  no_illegal_currencies.rs  recombinator_league_gating.rs
crates/capture/: CHANGELOG.md  Cargo.toml
crates/capture/src/: capture.rs  main.rs
crates/data/: CHANGELOG.md  Cargo.toml
crates/data/src/: bundle.rs  concepts.rs  error.rs  io.rs  lib.rs  schema.rs  sources.rs  synergy.rs  validation.rs  weights.rs
crates/data/tests/: base_registry_consistency.rs  round_trip.rs
crates/engine/: Cargo.toml
crates/engine/benches/: currency_apply.rs
crates/engine/src/: analyzer.rs  base.rs  base_registry.rs  concepts.rs  currency.rs  engine.rs  error.rs  ids.rs  item.rs  item_class.rs  lib.rs  mods.rs  omen.rs  patch.rs  registry.rs  tag.rs  weights.rs
crates/engine/src/currency/: alloy.rs  basic.rs  bone.rs  catalyst.rs  common.rs  essence.rs  fracturing.rs  hinekora.rs  recombinator.rs  resolver.rs  vaal.rs  variants.rs
crates/engine/tests/: base_registry_gating.rs  catalyst_gating.rs  crafting_invariants_proptest.rs  cross_version_gating.rs  desecration_gating.rs  desecration_mechanics.rs  essence_mechanics.rs  min_mod_level_pools.rs  only_flag_enforcement.rs  rarity_gating.rs  recombinator_success_formula.rs  vaal_outcome_distribution.rs  weight_ilvl_pool.rs  weighted_sampling.rs  worked_example_es_body_armour.rs
crates/market/: CHANGELOG.md  Cargo.toml
crates/market/data/locales/: de.json  fr.json  pt.json  ru.json  sp.json
crates/market/src/: cache.rs  lib.rs  meta.rs  name_match.rs  prices.rs  valuator.rs
crates/market/tests/: id_mapping_05.rs  price_cache.rs
crates/parser/: CHANGELOG.md  Cargo.toml
crates/parser/src/: lib.rs  lower.rs  text.rs
crates/plugin-host/: CHANGELOG.md  Cargo.toml
crates/plugin-host/src/: cache.rs  candidate.rs  lib.rs  manifest.rs  predicate.rs
crates/plugin-host/tests/: integration.rs
crates/plugin-sdk/: CHANGELOG.md  Cargo.toml
crates/plugin-sdk/src/: lib.rs
crates/poc2-wasm/: CHANGELOG.md  Cargo.toml
crates/poc2-wasm/src/: lib.rs
crates/poc2-wasm/src/commands/: canapply.rs  database.rs  eligible.rs  genesis.rs  mod.rs  outcome.rs  (+7 more)
crates/poc2-wasm/tests/: on_demand_solve.rs  plugin_content.rs  trained_models_load.rs
crates/probability/: CHANGELOG.md  Cargo.toml
crates/probability/src/: ev.rs  geometric.rs  lib.rs  montecarlo.rs
crates/rules/: CHANGELOG.md  Cargo.toml
crates/rules/seed_rules/: 00_progression.toml  01_abandonment.toml  02_fracture.toml  03_hinekora_lock.toml  04_exalt_vs_desecrate.toml  05_whittle_vs_annul.toml  06_stop_vs_continue.toml  07_pricing.toml  08_budget.toml  09_base_selection.toml  10_vaal.toml  11_market.toml  12_recovery.toml  13_confidence_ev.toml  14_genesis_tree.toml  99_catalysts.toml
crates/rules/src/: engine.rs  lib.rs  loader.rs  rule.rs  seed.rs
crates/strategies/: CHANGELOG.md  Cargo.toml
crates/strategies/src/: dsl.rs  executor.rs  lib.rs  loader.rs  predicate.rs  registry.rs  seed.rs
crates/strategies/strategies/: 1h-attack-physical-tri.toml  2h-attack-physical-crit.toml  3xt1-es-body-armour.toml  abyss-lord-omens.toml  annul-augment-spam.toml  apprentice-blueprint.toml  belt-es-spirit-resists.toml  belt-life-stun-tri-res.toml  beltons-four-t1-rubric.toml  bones-with-abyssal-echoes.toml  boots-es-ms-energy-shield.toml  boots-ms-life-tri-res.toml  bow-projectile-attack.toml  caster-weapon-spell-skill.toml  catalysing-exaltation.toml  crossbow-projectile-physical.toml  double-corruption.toml  exceptional-bases-exploit.toml  focus-es-spirit.toml  fracture-then-chaos-spam.toml  gloves-attack-speed-tri-res.toml  gloves-cast-speed-es.toml  greater-essence-regal-lockin.toml  greater-exaltation-stacking.toml  helmet-es-spirit-int-caster.toml  helmet-life-accuracy-tri-res.toml  hinekoras-lock-save-state.toml  ilvl-82-tri-resist-convergence.toml  jewel-cranium-desecrate.toml  magic-base-exit.toml  mark-of-the-abyss-swap.toml  omen-of-light-cleanup.toml  perfect-essence-crystallisation.toml  quiver-projectile-skill.toml  recombinator.toml  sanctification-finish.toml  sinistral-erasure-cleanup.toml  spear-melee-physical.toml  talisman-abyss-synergy.toml  timelost-jewel-lightless.toml  (+3 more)
crates/strategies/tests/: load_all_strategies.rs  load_canonical_strategy.rs
examples/plugins/predicate-ilvl-min/: Cargo.toml  poc2-plugin.toml
pipeline/: CHANGELOG.md  Cargo.toml
pipeline/data/: alloys.json  brequel_tree.json  coe_aliases.toml  desecrated_mods.json  emotions.json  genesis_meta.toml  training_goals.toml  upstream_state.json  vaal_implicits.json
pipeline/scripts/: README.md
pipeline/src/: build.rs  diff.rs  error.rs  http.rs  lib.rs  main.rs  watch.rs
pipeline/src/normalize/: alloy_fixups.rs  coe_to_bundle.rs  fixtures_to_bundle.rs  genesis_to_bundle.rs  mod.rs  poe2db_to_bundle.rs  repoe_to_bundle.rs  tiers.rs
pipeline/src/sources/: coe.rs  fixtures.rs  genesis.rs  mod.rs  poe2db.rs  repoe.rs  trade.rs
pipeline/tests/: floor_exception_probe.rs  live_bundle_pools.rs  load_real_artefact.rs  refined_catalyst_probe.rs  registry_coverage.rs  train_advisor_smoke.rs  watch_diff.rs
(+284 files in other folders)
