[workspace]
resolver = "2"
members = [
    "crates/engine",
    "crates/data",
    "crates/strategies",
    "crates/rules",
    "crates/probability",
    "crates/market",
    "crates/advisor",
    "crates/parser",
    "crates/plugin-host",
    "crates/plugin-sdk",
    "crates/poc2-wasm",
    "crates/capture",
    "apps/desktop/native/windows-ocr",
    "pipeline",
]
default-members = [
    "crates/engine",
    "crates/data",
    "crates/strategies",
    "crates/rules",
    "crates/probability",
    "crates/market",
    "crates/advisor",
    "crates/parser",
    "crates/plugin-host",
    "crates/plugin-sdk",
    "pipeline",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
authors = ["Path of Crafting 2 contributors"]
repository = "https://github.com/anomalyco/poc2"
homepage = "https://github.com/anomalyco/poc2"
readme = "README.md"

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
windows = { version = "0.61", features = [
    "Foundation",
    "Globalization",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
    "Win32_System_WinRT",
] }
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"

# Async / runtime (advisor, market, pipeline)
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time", "sync", "fs", "io-util"] }
futures = "0.3"

# HTTP (pipeline + market)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"], default-features = false }

# Tracing / logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Probability / math
rand = "0.8"
rand_xoshiro = "0.6"          # fast deterministic PRNG for seeded sims (Hinekora's Lock)
statrs = "0.17"                # geometric distribution

# Data structures
indexmap = { version = "2.5", features = ["serde"] }
smallvec = { version = "1.13", features = ["serde"] }
ahash = "0.8"
once_cell = "1.20"
bitflags = { version = "2.6", features = ["serde"] }
flate2 = "1.0"

# Versioning
semver = { version = "1.0", features = ["serde"] }

# Testing
proptest = "1.5"
insta = { version = "1.40", features = ["yaml", "json"] }

# Internal crates
poc2-engine      = { path = "crates/engine",      version = "2.0.0" }
poc2-data        = { path = "crates/data",        version = "2.0.0" }
poc2-strategies  = { path = "crates/strategies",  version = "2.0.0" }
poc2-rules       = { path = "crates/rules",       version = "2.0.0" }
poc2-probability = { path = "crates/probability", version = "2.0.0" }
# `net` (reqwest/tokio price pollers) is opt-in: off by default so the advisor
# and the WASM build stay wasm-buildable. Net users (desktop) add features=["net"].
poc2-market      = { path = "crates/market",      version = "2.0.0", default-features = false }
poc2-advisor     = { path = "crates/advisor",     version = "2.0.0" }
poc2-parser      = { path = "crates/parser",      version = "2.0.0" }
poc2-pipeline    = { path = "pipeline",           version = "2.0.0" }
poc2-plugin-host = { path = "crates/plugin-host", version = "2.0.0" }
poc2-plugin-sdk  = { path = "crates/plugin-sdk",  version = "2.0.0" }

# Wasm runtime (Phase F)
wasmtime = { version = "26", default-features = false, features = ["cranelift", "runtime"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
# Optimize deps in dev to keep our hot-loop perf reasonable in tests
opt-level = 1
