[package]
name = "poc2-pipeline"
description = "Path of Crafting 2 — data bundle build pipeline (RePoE-fork + Craft of Exile + poe2db scrape + GGG trade-stat)"
default-run = "poc2-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "poc2-pipeline"
path = "src/main.rs"

[[bin]]
name = "fetch-base-icons"
path = "src/bin/fetch_base_icons.rs"

[[bin]]
name = "regen-poe2db-fixtures"
path = "src/bin/regen_poe2db_fixtures.rs"

[[bin]]
name = "train-advisor"
path = "src/bin/train_advisor.rs"

[[bin]]
name = "audit-matrix"
path = "src/bin/audit_matrix.rs"

[[bin]]
name = "fetch-genesis-assets"
path = "src/bin/fetch_genesis_assets.rs"

[[bin]]
name = "fetch-trade-stats"
path = "src/bin/fetch_trade_stats.rs"

[dependencies]
poc2-engine.workspace = true
poc2-data.workspace = true
poc2-advisor.workspace = true
poc2-market.workspace = true
poc2-rules.workspace = true
poc2-strategies.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
# `blocking` is needed by the optional live `ReqwestTradeFetcher`
# (M14.7d). Cargo features are additive and the type itself is gated
# behind the `trade-scrape` feature, so the blocking subsystem only
# ships on builds that actually opt into the live trade scraper.
reqwest = { workspace = true, features = ["blocking"] }
tracing.workspace = true
tracing-subscriber.workspace = true
indexmap.workspace = true
smallvec.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
ahash.workspace = true
clap = { version = "4.5", features = ["derive", "env"] }
sha2 = "0.10"
hex = "0.4"
regex = "1.11"
scraper = "0.20"

[features]
# `trade-scrape` enables the live `ReqwestTradeFetcher` in
# `crate::sources::trade`. The default build path keeps the parser,
# cache, and observation-emission machinery available without pulling
# the live HTTP fetcher into compilation paths that don't need it.
default = []
trade-scrape = []

[dev-dependencies]
tempfile = "3.13"
