[package]
name = "poc2-data"
description = "Path of Crafting 2 — bundle loader, schema types, patch-versioned data access"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
poc2-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
indexmap.workspace = true
ahash.workspace = true
semver.workspace = true
tracing.workspace = true
flate2 = { version = "1.0", optional = true }

[features]
default = ["gzip"]
gzip = ["dep:flate2"]

[dev-dependencies]
insta.workspace = true
smallvec.workspace = true
indexmap.workspace = true
tempfile = "3.13"
serde_json.workspace = true
