[package]
name = "poc2-market"
description = "Path of Crafting 2 — currency valuator, live prices, meta-build awareness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
poc2-data.workspace = true
poc2-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
ahash.workspace = true
# Pure-Rust string-similarity (Levenshtein) for the fuzzy name matcher.
# WASM-safe; already present transitively in Cargo.lock.
strsim = "0.11"
# Network/disk price-feed deps are optional so the advisor (and the WASM build)
# can depend on this crate for the `Valuator` type alone, without pulling in
# reqwest/tokio (which don't build for wasm32-unknown-unknown).
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
urlencoding = { version = "2.1", optional = true }
# Concurrent multi-`type` poe.ninja fetches (try_join_all); net-only.
futures = { workspace = true, optional = true }

[features]
default = ["net"]
# `net` enables the live price/meta pollers + on-disk snapshot cache
# (`prices`, `meta`, `cache` modules). Without it, only `valuator` is built.
net = ["dep:reqwest", "dep:tokio", "dep:urlencoding", "dep:futures"]

[dev-dependencies]
insta.workspace = true
tempfile = "3.13"
