[package]
name = "poc2-parser"
description = "Path of Crafting 2 — PoE2 in-game item-text parser (Ctrl+C clipboard format)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
poc2-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
smallvec.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
