[package]
name = "poc2-plugin-host"
description = "Path of Crafting 2 — wasmtime-backed plugin host (Phase F)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
poc2-engine.workspace = true
poc2-strategies.workspace = true
poc2-rules.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
ahash.workspace = true
anyhow.workspace = true
wasmtime.workspace = true

[dev-dependencies]
tempfile = "3"
