[package]
name = "poc2-plugin-sdk"
description = "Path of Crafting 2 — guest-side plugin SDK helpers (Phase F.5)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
