[package]
name = "poc2-strategies"
description = "Path of Crafting 2 — codified strategy library (TOML DSL + executor)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
poc2-engine.workspace = true
poc2-data.workspace = true
poc2-market.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
indexmap.workspace = true
ahash.workspace = true
smallvec.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
ahash.workspace = true
