[package]
name = "poc2-desktop"
description = "Path of Crafting 2 — desktop application (Tauri 2)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "poc2_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2
tauri = { version = "2" }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"

# Internal crates
poc2-engine.workspace = true
poc2-data.workspace = true
poc2-strategies.workspace = true
poc2-rules.workspace = true
poc2-probability.workspace = true
poc2-market.workspace = true
poc2-advisor.workspace = true
poc2-parser.workspace = true

# Common
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

[features]
# Default Tauri features
default = ["custom-protocol"]
# Production builds use the custom protocol; dev mode uses the dev server
custom-protocol = ["tauri/custom-protocol"]
